crates/swc/tests/tsc-references/comparisonOperatorWithNumberOperand.1.normal.js
//// [comparisonOperatorWithNumberOperand.ts]
t1 >= 0; // error
